--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Verdiene passives Einkommen mit SimCash – Nutze deine ungenutzten SMS und verdiene Geld! Erfahre mehr hier.">
-    <meta name="keywords" content="SimCash, passives Einkommen, Geld verdienen, SMS Monetarisierung">
+    <meta name="keywords" content="SimCash, passives Einkommen, Geld verdienen, SMS Monetarisierung, Nebenverdienst, SMS Geld verdienen, Handy Einkommen">
     <meta name="author" content="Dein Name">
-    <title>SimCash – Passives Einkommen durch SMS</title>
+    <meta property="og:title" content="SimCash – Passives Einkommen mit SMS">
+    <meta property="og:description" content="Nutze deine ungenutzten SMS und verdiene Geld mit SimCash. Erfahre hier mehr!">
+    <meta property="og:image" content="https://DEINESEITE.com/simcash-preview.jpg">
+    <meta property="og:url" content="https://DEIN_GITHUB_USERNAME.github.io/REPOSITORY_NAME/">
+    <title>SimCash: Geld verdienen mit SMS – Passives Einkommen leicht gemacht</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
         #content { max-width: 600px; margin: auto; }
         .lang-btn { cursor: pointer; margin: 10px; padding: 5px 10px; background: #007BFF; color: white; border: none; }
         .hidden { display: none; }
+        img { max-width: 100%; height: auto; margin: 20px 0; }
     </style>
 </head>
 <body>
@@ -20,14 +25,31 @@
     <button class="lang-btn" onclick="switchLang('en')">English</button>
     
     <div id="content">
+        <img src="https://DEINESEITE.com/simcash-illustration.jpg" alt="SimCash Infografik">
         <div id="de">
             <p>Nutze ungenutzte SMS-Kapazitäten und verdiene Geld mit SimCash.</p>
-            <p>Melde dich noch heute an und starte mit deinem passiven Einkommen!</p>
+            <p>So funktioniert es:</p>
+            <ol>
+                <li>Registriere dich bei SimCash.</li>
+                <li>Verbinde deine SIM-Karte mit der App.</li>
+                <li>Lehne dich zurück und verdiene Geld passiv durch SMS-Versand.</li>
+            </ol>
+            <p><strong>Häufige Fragen:</strong></p>
+            <p><strong>Ist SimCash sicher?</strong> – Ja, die App hat Tausende Nutzer weltweit und zahlt regelmäßig aus.</p>
+            <p><strong>Wie erfolgt die Auszahlung?</strong> – Per Banküberweisung, PayPal oder Kryptowährungen.</p>
             <a href="DEIN_REFERRAL_LINK">Jetzt registrieren</a>
         </div>
         <div id="en" class="hidden">
             <p>Use unused SMS capacity and earn money with SimCash.</p>
-            <p>Sign up today and start your passive income!</p>
+            <p>How it works:</p>
+            <ol>
+                <li>Sign up for SimCash.</li>
+                <li>Connect your SIM card to the app.</li>
+                <li>Relax and earn passive income through SMS sending.</li>
+            </ol>
+            <p><strong>Frequently Asked Questions:</strong></p>
+            <p><strong>Is SimCash safe?</strong> – Yes, the app has thousands of users worldwide and pays out regularly.</p>
+            <p><strong>How do payouts work?</strong> – Via bank transfer, PayPal, or cryptocurrencies.</p>
             <a href="DEIN_REFERRAL_LINK">Register now</a>
         </div>
     </div>
