--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Dein Name">
     <meta property="og:title" content="SimCash – Passives Einkommen mit SMS">
     <meta property="og:description" content="Nutze deine ungenutzten SMS und verdiene Geld mit SimCash. Erfahre hier mehr!">
-    <meta property="og:image" content="https://DEINESEITE.com/simcash-preview.jpg">
+    <meta property="og:image" content="homepage.png">
     <meta property="og:url" content="https://DEIN_GITHUB_USERNAME.github.io/REPOSITORY_NAME/">
     <title>SimCash: Geld verdienen mit SMS – Passives Einkommen leicht gemacht</title>
     <style>
