--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <button class="lang-btn" onclick="switchLang('en')">English</button>
     
     <div id="content">
-        <img src="https://DEINESEITE.com/simcash-illustration.jpg" alt="SimCash Infografik">
+        <img src="homepage.png" alt="SimCash Infografik">
         <div id="de">
             <p>Nutze ungenutzte SMS-Kapazitäten und verdiene Geld mit SimCash.</p>
             <p>So funktioniert es:</p>
