--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="SimCash – Passives Einkommen mit SMS">
     <meta property="og:description" content="Nutze deine ungenutzten SMS und verdiene Geld mit SimCash. Erfahre hier mehr!">
     <meta property="og:image" content="homepage.png">
-    <meta property="og:url" content="https://DEIN_GITHUB_USERNAME.github.io/REPOSITORY_NAME/">
+    <meta property="og:url" content="https://jackbot2025.github.io/SMS-earn/index.html">
     <title>SimCash: Geld verdienen mit SMS – Passives Einkommen leicht gemacht</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
@@ -37,7 +37,7 @@
             <p><strong>Häufige Fragen:</strong></p>
             <p><strong>Ist SimCash sicher?</strong> – Ja, die App hat Tausende Nutzer weltweit und zahlt regelmäßig aus.</p>
             <p><strong>Wie erfolgt die Auszahlung?</strong> – Per Banküberweisung, PayPal oder Kryptowährungen.</p>
-            <a href="DEIN_REFERRAL_LINK">Jetzt registrieren</a>
+            <a href="https://tinyurl.com/ykh4vm56">Jetzt registrieren</a>
         </div>
         <div id="en" class="hidden">
             <p>Use unused SMS capacity and earn money with SimCash.</p>
@@ -50,7 +50,7 @@
             <p><strong>Frequently Asked Questions:</strong></p>
             <p><strong>Is SimCash safe?</strong> – Yes, the app has thousands of users worldwide and pays out regularly.</p>
             <p><strong>How do payouts work?</strong> – Via bank transfer, PayPal, or cryptocurrencies.</p>
-            <a href="DEIN_REFERRAL_LINK">Register now</a>
+            <a href="https://tinyurl.com/ykh4vm56">Register now</a>
         </div>
     </div>
     
