--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="SimCash – Passives Einkommen mit SMS">
     <meta property="og:description" content="Nutze deine ungenutzten SMS und verdiene Geld mit SimCash. Erfahre hier mehr!">
     <meta property="og:image" content="homepage.png">
-    <meta property="og:url" content="https://jackbot2025.github.io/SMS-earn/index.html">
+    <meta property="og:url" content="https://tinyurl.com/SMS-earn-APP">
     <title>SimCash: Geld verdienen mit SMS – Passives Einkommen leicht gemacht</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
