--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
 
         <a class="cta-button" href="https://tinyurl.com/ykh4vm56" target="_blank">Jetzt kostenlos registrieren</a>
       </div>
+      <div class="info-box">
+        <strong>💡 Tip:</strong> Enter referral code <strong>JVAEJ</strong> during signup to earn <strong>50% more forever</strong>!
+      </div>
+
 
       <!-- ENGLISCH -->
       <div id="en" class="hidden">
@@ -139,43 +143,81 @@
 
         <a class="cta-button" href="https://tinyurl.com/ykh4vm56" target="_blank">Register now for free</a>
       </div>
+      <div class="info-box">
+        <strong>💡 Tip:</strong> Enter referral code <strong>JVAEJ</strong> during signup to earn <strong>50% more forever</strong>!
+      </div>
+
     </div>
 
     <!-- GUIDE -->
     <div id="guide" class="hidden">
       <!-- Deutsch -->
       <div id="de">
-        <h2>📘 Schritt-für-Schritt Anleitung</h2>
+          <h2>Schritt-für-Schritt Anleitung</h2>
 
-        <h3>1. Registrierung</h3>
-        <p>Gehe auf die <a href="https://tinyurl.com/ykh4vm56" target="_blank">offizielle SimCash-Seite</a> und erstelle ein Konto.</p>
-        <img src="register.png" alt="Registrierung bei SimCash Schritt 1" />
+          <h3>1. App herunterladen & installieren</h3>
+          <p>Gehe auf die <a href="https://tinyurl.com/ykh4vm56">offizielle SimCash-Seite</a> und lade die App herunter.</p>
+          <p><strong>Wichtig:</strong> Aktiviere auf deinem Android-Gerät <em>"unsichere Quellen zulassen"</em>, damit du die App installieren kannst.</p>
+          <img src="register.jpg" alt="App herunterladen und installieren">
 
-        <h3>2. SIM-Karte verbinden</h3>
-        <p>Lade die SimCash-App herunter und verbinde deine SIM-Karte mit deinem Profil.</p>
-        <img src="connect_sim.png" alt="SIM-Karte mit SimCash verbinden" />
+          <h3>2. Registrierung in der App</h3>
+          <p>Öffne die App und registriere dich mit deiner E-Mail-Adresse.</p>
+          <p><strong>Referral-Code nicht vergessen:</strong> Gib bei der Registrierung den Code <strong>JVAEJ</strong> ein, um dauerhaft <strong>50% mehr Geld</strong> zu verdienen!</p>
 
-        <h3>3. Geld verdienen</h3>
-        <p>Aktiviere den Dienst und beginne passiv Geld durch SMS-Versand zu verdienen.</p>
-        <img src="earning.png" alt="Passives Einkommen durch SimCash" />
+          <h3>3. SIM-Karte verbinden</h3>
+          <p>Nach dem Login zeigt die App deine verfügbaren SIM-Karten an. Wähle die gewünschte SIM-Karte aus.</p>
+          <img src="start.jpg" alt="SIM-Karte Übersicht">
+
+          <h3>4. Einstellungen anpassen</h3>
+          <p>Klicke oben rechts auf die drei Punkte, um in das Menü zu gelangen.</p>
+          <img src="update_sim.jpg" alt="Drei-Punkte-Menü öffnen">
+          <p>Wähle anschließend <strong>"Modify Limits"</strong>.</p>
+          <img src="update_sim_prices.jpg" alt="Limits bearbeiten">
+
+          <h3>5. Limits festlegen</h3>
+          <p>Lege hier deine täglichen Versandlimits fest:</p>
+          <ul>
+              <li>Zu Beginn: <strong>3 Nachrichten pro Stunde</strong> und <strong>15 Nachrichten pro Tag</strong></li>
+              <li>Steigere das Limit <strong>täglich um 1</strong> Nachricht pro Stunde & Tag</li>
+          </ul>
+          <img src="start_daily_limit.jpg" alt="Limits festlegen">
+          <p>Klicke danach auf <strong>„Continue“</strong> und abschließend auf <strong>„Update SIM“</strong>, um den Dienst zu starten.</p>
       </div>
+
 
       <!-- Englisch -->
-      <div id="en" class="hidden">
-        <h2>📘 Step-by-Step Guide</h2>
+      <div id="en">
+          <h2>Step-by-Step Guide</h2>
 
-        <h3>1. Registration</h3>
-        <p>Go to the <a href="https://tinyurl.com/ykh4vm56" target="_blank">official SimCash page</a> and create an account.</p>
-        <img src="register.png" alt="SimCash registration step" />
+          <h3>1. Download & Install the App</h3>
+          <p>Go to the <a href="https://tinyurl.com/ykh4vm56">official SimCash website</a> and download the app.</p>
+          <p><strong>Important:</strong> On Android, you must enable <em>"Allow installation from unknown sources"</em> to install the app.</p>
+          <img src="register.jpg" alt="Download and install the app">
 
-        <h3>2. Connect SIM Card</h3>
-        <p>Download the SimCash app and connect your SIM card to your profile.</p>
-        <img src="connect_sim.png" alt="Connect SIM card to SimCash" />
+          <h3>2. Register in the App</h3>
+          <p>Open the app and register with your email address.</p>
+          <p><strong>Referral code:</strong> Enter <strong>JVAEJ</strong> during registration to earn <strong>50% more money</strong> forever!</p>
 
-        <h3>3. Start Earning</h3>
-        <p>Activate the service and start earning passively through SMS sending.</p>
-        <img src="earning.png" alt="Earn money passively with SimCash" />
+          <h3>3. Connect Your SIM Card</h3>
+          <p>After logging in, the app will show your available SIM cards. Select the one you want to use.</p>
+          <img src="start.jpg" alt="SIM card overview">
+
+          <h3>4. Adjust the Settings</h3>
+          <p>Click the three dots in the top-right corner to open the settings menu.</p>
+          <img src="update_sim.jpg" alt="Open the three-dot menu">
+          <p>Then choose <strong>"Modify Limits"</strong>.</p>
+          <img src="update_sim_prices.jpg" alt="Modify limits">
+
+          <h3>5. Set Daily Limits</h3>
+          <p>Now set your sending limits as follows:</p>
+          <ul>
+              <li>Start with <strong>3 messages per hour</strong> and <strong>15 messages per day</strong></li>
+              <li>Increase both limits by <strong>1 per day</strong></li>
+          </ul>
+          <img src="start_daily_limit.jpg" alt="Set message limits">
+          <p>Click <strong>“Continue”</strong> and finally tap <strong>“Update SIM”</strong> to activate the service.</p>
       </div>
+
     </div>
   </div>
 
