--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
         <a class="cta-button" href="https://tinyurl.com/ykh4vm56" target="_blank">Jetzt kostenlos registrieren</a>
       </div>
       <div class="info-box">
-        <strong>💡 Tip:</strong> Enter referral code <strong>JVAEJ</strong> during signup to earn <strong>50% more forever</strong>!
+        <strong>💡 Tipp:</strong> Gib den Empfehlungs-Code <strong>JVAEJ</strong> bei der Anmeldung ein, um dauerhaft <strong>50% mehr</strong> zu verdienen!
       </div>
-
 
       <!-- ENGLISCH -->
       <div id="en" class="hidden">
@@ -183,7 +182,6 @@
           <img src="start_daily_limit.jpg" alt="Limits festlegen">
           <p>Klicke danach auf <strong>„Continue“</strong> und abschließend auf <strong>„Update SIM“</strong>, um den Dienst zu starten.</p>
       </div>
-
 
       <!-- Englisch -->
       <div id="en">
